Migration to plural names and ids
